[package]
name = "conways-game-of-life"
version = "0.1.0"
authors = ["luke"]
edition = "2018"

[dependencies]
piston_window = "0.123.0"
image = "0.24.1"
find_folder = "0.3.0"
rand = "0.8.0"
rand_distr = "0.4.1"
conrod_core = "0.74.0"
fps_counter = "2.0.0"
rayon = "1.10.0"
gfx_device_gl = "0.16.1"
pathfinding = "4.11.0"

[profile.release]
debug = true